parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_macro.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens_expanded(&mut l)

---
[
    Token {
        kind: NewLine,
        leading_space: false,
        hideset: {},
        loc: 2:1,
    },
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:1,
    },
    Token {
        kind: Ident(
            "f",
        ),
        leading_space: true,
        hideset: {},
        loc: 3:5,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:6,
    },
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:7,
    },
    Token {
        kind: Ident(
            "x",
        ),
        leading_space: true,
        hideset: {},
        loc: 3:11,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:12,
    },
    Token {
        kind: Symbol(
            OpeningBrace,
        ),
        leading_space: true,
        hideset: {},
        loc: 3:14,
    },
    Token {
        kind: Keyword(
            Return,
        ),
        leading_space: true,
        hideset: {},
        loc: 3:16,
    },
    Token {
        kind: Ident(
            "x",
        ),
        leading_space: true,
        hideset: {},
        loc: 3:23,
    },
    Token {
        kind: Symbol(
            Add,
        ),
        leading_space: true,
        hideset: {},
        loc: 3:25,
    },
    Token {
        kind: Int(
            Int(
                1,
            ),
        ),
        leading_space: true,
        hideset: {
            "ONE",
        },
        loc: 3:27,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: 3:30,
    },
    Token {
        kind: Symbol(
            ClosingBrace,
        ),
        leading_space: true,
        hideset: {},
        loc: 3:32,
    },
]
