parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_macro4.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens_expanded(&mut l)

---
[
    Token {
        kind: Keyword(
            Void,
        ),
        leading_space: false,
        hideset: {},
        loc: None:3:1,
    },
    Token {
        kind: Ident(
            "main",
        ),
        leading_space: true,
        hideset: {},
        loc: None:3:6,
    },
    Token {
        kind: Symbol(
            OpeningParen,
        ),
        leading_space: false,
        hideset: {},
        loc: None:3:10,
    },
    Token {
        kind: Symbol(
            ClosingParen,
        ),
        leading_space: false,
        hideset: {},
        loc: None:3:11,
    },
    Token {
        kind: Symbol(
            OpeningBrace,
        ),
        leading_space: true,
        hideset: {},
        loc: None:3:13,
    },
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: true,
        hideset: {},
        loc: None:3:15,
    },
    Token {
        kind: Ident(
            "foobar123",
        ),
        leading_space: true,
        hideset: {
            "CAT",
        },
        loc: None:3:19,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: None:3:32,
    },
    Token {
        kind: Symbol(
            ClosingBrace,
        ),
        leading_space: true,
        hideset: {},
        loc: None:3:34,
    },
]
