parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_macro5.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens_expanded(&mut l)

---
[
    Token {
        kind: String(
            "hello",
        ),
        leading_space: false,
        hideset: {
            "HELLO",
        },
        loc: 4:1,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: 4:6,
    },
    Token {
        kind: Int(
            Int(
                10,
            ),
        ),
        leading_space: true,
        hideset: {
            "TEN",
        },
        loc: 4:8,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: 4:11,
    },
    Token {
        kind: String(
            "hello",
        ),
        leading_space: false,
        hideset: {
            "HELLO",
        },
        loc: 6:1,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: 6:6,
    },
    Token {
        kind: Ident(
            "TEN",
        ),
        leading_space: true,
        hideset: {},
        loc: 6:8,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: 6:11,
    },
]
