parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_macro6.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens_expanded(&mut l)

---
[
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: false,
        hideset: {},
        loc: None:4:1,
    },
    Token {
        kind: Ident(
            "f",
        ),
        leading_space: true,
        hideset: {},
        loc: None:4:5,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: None:4:6,
    },
]
