parser/src/lexer/snapshots/long_parser__lexer__src_lexer__read_macro7.snap
---
source: parser/src/lexer/src_lexer.rs
expression: read_all_tokens_expanded(&mut l)

---
[
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: false,
        hideset: {},
        loc: None:5:1,
    },
    Token {
        kind: Ident(
            "f",
        ),
        leading_space: true,
        hideset: {},
        loc: None:5:5,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: None:5:6,
    },
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: false,
        hideset: {},
        loc: None:10:1,
    },
    Token {
        kind: Ident(
            "h",
        ),
        leading_space: true,
        hideset: {},
        loc: None:10:5,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: None:10:6,
    },
    Token {
        kind: Keyword(
            Int,
        ),
        leading_space: false,
        hideset: {},
        loc: None:14:1,
    },
    Token {
        kind: Ident(
            "k",
        ),
        leading_space: true,
        hideset: {},
        loc: None:14:5,
    },
    Token {
        kind: Symbol(
            Semicolon,
        ),
        leading_space: false,
        hideset: {},
        loc: None:14:6,
    },
]
